crates/ars-core/tests/ui/has_id_on_enum.stderr
error: HasId can only be derived for structs
 --> tests/ui/has_id_on_enum.rs:4:1
  |
4 | / enum Props {
5 | |     Root,
6 | | }
  | |_^
