crates/ars-core/tests/ui/has_id_on_enum.rs
use ars_core::HasId;

#[derive(HasId)]
enum Props {
    Root,
}

fn main() {}
